--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>hi, i'm soumya</title>
+  <title>hi!</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- linking css file -->
@@ -15,28 +15,89 @@
 
 <body class="body">
 
+
     <header class="header">
-        <a href="#" class="logo">soumya</a>
+        <a href="#" class="logo">
+          <img src="images/smoon_logo.png" class="logo-img" loading="lazy" alt="Soumya's Logo" />
+        </a>
 
         <nav class="navbar">
             <a href="#" class="active">home</a>
-            <a href="#">about me</a>
-            <a href="#">experience</a>
-            <a href="#">projects</a>
-            <a href="#">art</a>
+            <a href="#about">about me</a>
+            <a href="#experience">experience</a>
+            <a href="#projects">projects</a>
+            <a href="#art">art</a>
         </nav>
     </header>
 
     <section class="home">
         <div class="home-content">
-            <h1>hi, i'm soumya!</h1>
+            <h1>hey, i'm soumya!</h1>
+            <div>
+              <img src="images/smoon_logo.png" class="home-logo" alt="Soumya's Logo">
+          </div>
             <h3>math, physics, programming, art</h3>
-            <p>lorem ipsum</p>
+            <!-- <p>lorem ipsum</p> -->
             <div class="btn-box">
                 <a href="#">let's talk</a>
             </div>
         </div>
     </section>
+
+        <!-- about me -->
+    <section id="about" class="about">
+        <div class="about-content">
+          <h2>about me</h2>
+          <h3>hi! i'm a multidisciplinary mathematical physics student at university of waterloo who has way too many 
+            interests. i love working in the intersection of disciplines, creating meaningful communities, and dabbling in any form of art.<!-- idk lol change this-->
+          </h3>
+        </div>
+    </section>
+
+    <!-- experience -->
+    <section id="experience" class="experience">
+      <div class="experience-content">
+          <h1>experience</h1>
+          <div class="exp-block">
+            <h2>Aquanty</h2>
+          </div>
+          <div class="exp-block">
+            <h2>NRC</h2>
+          </div>
+          <div class="exp-block">
+            <h2>NRC</h2>
+          </div>
+          <div class="exp-block">
+            <h2>OICR</h2>
+          </div>
+      </div>
+  </section>
+
+  <!-- projects -->
+  <section id="projects" class="projects">
+    <div class="project-content">
+        <h1>experience</h1>
+        <div class="proj-block">
+          <h2>oceanoGRAPH</h2>
+          <h2>butterfly</h2>
+          <h2>Directed Reading Program</h2>
+        </div>
+    </div>
+</section>
+
+  <!-- art -->
+  <section id="art" class="art">
+    <div class="project-content">
+        <h1>experience</h1>
+        <div class="proj-block">
+          <h2>oceanoGRAPH</h2>
+          <h2>butterfly</h2>
+          <h2>Directed Reading Program</h2>
+        </div>
+    </div>
+</section>
+
+    
 
 </body>
 </html>
